--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Taskcrud"
         tools:targetApi="31">
         <activity
+            android:name=".ui.UpdateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.RegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".ForgetpwActivity"
             android:exported="false" />
         <activity
@@ -31,7 +40,7 @@
             android:name=".AddProductActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
